# SenseCAP-Gateway-OS

./: .config  README.md  README_zh-CN.md
feeds/lorawan-gateway/bacnet-stack/: Makefile
feeds/lorawan-gateway/bacnet-stack/patches/: 001-fix-termios2-musl-ioctls.patch  002-server-basic-mstp-use-env-iface.patch
feeds/lorawan-gateway/basicstation_ubus/: Makefile
feeds/lorawan-gateway/basicstation_ubus/files/etc/init.d/: basicstation
feeds/lorawan-gateway/basicstation_ubus/files/etc/uci-defaults/: 71_basicstation
feeds/lorawan-gateway/chirpstack-concentratord-target-seeed-gateway/: Makefile
feeds/lorawan-gateway/chirpstack-concentratord-target-seeed-gateway/files/etc/uci-defaults/: 75_chirpstack-concentratord
feeds/lorawan-gateway/hardware-info/: Makefile
feeds/lorawan-gateway/lora/: Makefile
feeds/lorawan-gateway/lora/src/: main.rs
feeds/lorawan-gateway/lte-serve/files/: lte-serve.init  lte-serve.sh
feeds/lorawan-gateway/packetforwarder/: Makefile
feeds/lorawan-gateway/rs485-bacnet/: Cargo.toml  Makefile
feeds/lorawan-gateway/rs485-bacnet/files/: rs485-bacnet.init
feeds/lorawan-gateway/rs485-bacnet/files/etc/uci-defaults/: 74_rs485-bacnet
feeds/lorawan-gateway/rs485-bacnet/src/: bacnet.rs  main.rs  mstp.rs
feeds/lorawan-gateway/rs485-modbus/src/: main.rs
feeds/lorawan-gateway/rs485-module/: Makefile
feeds/lorawan-gateway/rs485-module/files/: rs485-module.init
feeds/lorawan-gateway/rs485-module/src/: main.rs
feeds/lorawan-gateway/ups-module/: Makefile
feeds/luci-lorawan-gateway/luci-theme-sensecap/less/: sysauth.less
(+19 files in other folders)
