[package]
name = "rs485-bacnet"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-serial = "5.4"
rumqttc = { version = "0.24", features = ["websocket", "use-rustls"] }
bacnet-rs = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
rustls-pemfile = "2.2"
webpki-roots = "0.26"
log = "0.4"
env_logger = "0.10"
hex = "0.4"
hostname = "0.4"
